@@ -42,6 +42,12 @@ faster uncertainty computation:
 
 2024-11-07 Added simple math operation functions to the C API
 
+2024-11-27 bestq uncertainty method
+  - works
+  - needs documentation
+  - MUCH slower than the mean-pcam, since it solves the linear problem (Nframes
+    or Ncameras_extrinsics) more times than mean-pcam
+
 * Migration notes 2.4 -> 3.0
 
 * todo
